--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>Cat Jump Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cuttests Game</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
