--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div id="score">Score: 0</div>
-
+    <a href="https://cuttests.xyz" class="game-btn">FORM</a>
     <div id="gameOverModal" class="modal" style="display: none;">
       <div class="modal-content">
         <h1>Game over</h1>
